--- a/client/src/components/loginIdsComponent/styles/loginList.module.css
+++ b/client/src/components/loginIdsComponent/styles/loginList.module.css
@@ -62,6 +62,11 @@
   /* border: 1px solid skyblue; */
 }
 
+.blurContainer {
+  opacity: 0.1;
+  /* border: 1px solid salmon; */
+}
+
 .contentContainerClose {
   position: relative;
   height: 100%;
